--- a/index.html
+++ b/index.html
@@ -1,10 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Scratchat</title>
+    <title>Senior Design Lab Two</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <!-- jQuery cdn -->
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <h1>Hello there!</h1>
-    <p>welcome to scratchat</p>
+      <nav class="navbar navbar-light bg-faded">
+
+        <a class="navbar-brand" href="#">Scratchat</a>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#">Home</a>
+            <a class="nav-item nav-link" href="#">Features</a>
+            <a class="nav-item nav-link" href="#">Pricing</a>
+          </div>
+        </div>
+
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="true" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+      </nav>
+    <div class="container">
+      <div class="jumbotron">
+        <h1 class="display-3 text-center">Scatchat</h1>
+        <br>
+        <p class="lead text-center">- Scratch-like chatbot building service</p>
+        <hr class="my-4">
+        <p class="text-center">For more information...</p>
+        <p class="lead text-center">
+          <a class="btn btn-primary btn-lg" href="https://github.com/jiyuhan/sd_lab_2" role="button">Learn more</a>
+        </p>
+      </div>
+    </div>
   </body>
 </html>
