--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
     <!-- jQuery cdn -->
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/main.css">
+    <script>
+        function openNav() {
+            document.getElementById("mySidenav").style.width = "250px";
+            document.getElementById("main").style.marginLeft = "250px";
+        }
+
+        function closeNav() {
+            document.getElementById("mySidenav").style.width = "0";
+            document.getElementById("main").style.marginLeft= "0";
+        } 
+    </script>
   </head>
   <body>
+<!--
       <nav class="navbar navbar-light bg-faded">
-
         <a class="navbar-brand" href="#">Scratchat</a>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
@@ -24,9 +35,22 @@
         </button>
 
       </nav>
+-->
+
+      <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="#">Home</a>
+        <a href="#">Features</a>
+        <a href="#">Pricing</a>
+        <a href="https://scratch.mit.edu/about">About Scratch</a>
+      </div>
+
+      <div id="main">
+        <span style="font-size:30px;cursor:pointer; color: #white" onclick="openNav()">&#9776;</span>
+      </div>
     <div class="container">
       <div class="jumbotron">
-        <h1 class="display-3 text-center">Scatchat</h1>
+        <h1 class="display-3 text-center">Scratchat</h1>
         <br>
         <p class="lead text-center">- Scratch-like chatbot building service</p>
         <hr class="my-4">
