some website updates

--- a/features.html
+++ b/features.html
@@ -19,11 +19,12 @@
         </script>
     </head>
     <body>
+
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="aboutus.html">About us</a>
-            <a href="features.html">Features</a>
+            <a href="#">Features</a>
             <a href="https://scratch.mit.edu/about">About Scratch</a>
         </div>
 
@@ -31,7 +32,7 @@
             <span style="font-size:30px;cursor:pointer; color: #white" onclick="openNav()">&#9776;</span>
         </div>
         <div class="container">
-            <div class="jumbotron" id="jumbo">
+            <div class="jumbotron">
                 <h1 class="display-3 text-center">Scratchat</h1>
                 <br>
                 <p class="lead text-center">- Scratch-like chatbot building service</p>
