--- a/scratchat.html
+++ b/scratchat.html
@@ -19,9 +19,10 @@
         </script>
     </head>
     <body>
+
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="aboutus.html">About us</a>
             <a href="features.html">Features</a>
             <a href="https://scratch.mit.edu/about">About Scratch</a>
@@ -31,16 +32,10 @@
             <span style="font-size:30px;cursor:pointer; color: #white" onclick="openNav()">&#9776;</span>
         </div>
         <div class="container">
-            <div class="jumbotron" id="jumbo">
-                <h1 class="display-3 text-center">Scratchat</h1>
-                <br>
-                <p class="lead text-center">- Scratch-like chatbot building service</p>
-                <hr class="my-4">
-                <p class="text-center">For more information...</p>
-                <p class="lead text-center">
-                <a class="btn btn-primary btn-lg" href="scratchat.html" role="button">Start!</a>
-                <a class="btn btn-primary btn-lg" href="tutorial.html" role="button">I want to learn.</a>
-                </p>
+            <div class="jumbotron">
+                <div id="scratchWindow" style="padding-top: 200px; padding-bottom: 200px;">
+
+                </div>
             </div>
         </div>
     </body>
