Drag and drop initial state

--- a/aboutus.html
+++ b/aboutus.html
@@ -6,8 +6,7 @@
         <!-- jQuery cdn -->
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/main.css">
-
-
+        
         <script>
             function openNav() {
                 document.getElementById("mySidenav").style.width = "250px";
@@ -28,6 +27,8 @@
             <a href="index.html">Home</a>
             <a href="#">About us</a>
             <a href="features.html">Features</a>
+            <a href="scratchat.html">Build</a>
+            <a href="tutorial.html">Tutorial</a>
             <a href="https://scratch.mit.edu/about">About Scratch</a>
         </div>
         <div id="main">
@@ -39,7 +40,7 @@
                 <p>with awesomeness loaded, and aim to build a Facebook chatbot implementer!</p>
             </div>
         </div>
-        <div class="container-fluid" style="background-color: white; padding-top: 50px; padding-bottom: 50px;">
+        <div class="container-fluid" style="padding-top: 50px; padding-bottom: 50px;">
             <!--<div class="row">
                 <div class="col-md-4">
                     <div class="thumbnail"><img src="res/thomashan.jpg">
