--- a/features.html
+++ b/features.html
@@ -25,6 +25,8 @@
             <a href="index.html">Home</a>
             <a href="aboutus.html">About us</a>
             <a href="#">Features</a>
+            <a href="scratchat.html">Build</a>
+            <a href="tutorial.html">Tutorial</a>
             <a href="https://scratch.mit.edu/about">About Scratch</a>
         </div>
 
