--- a/tutorial.html
+++ b/tutorial.html
@@ -26,14 +26,14 @@
             <a href="aboutus.html">About us</a>
             <a href="features.html">Features</a>
             <a href="scratchat.html">Build</a>
-            <a href="#">tutorial</a>
+            <a href="#">Tutorial</a>
             <a href="https://scratch.mit.edu/about">About Scratch</a>
         </div>
 
         <div id="main">
             <span style="font-size:30px;cursor:pointer; color: #white" onclick="openNav()">&#9776;</span>
         </div>
-        <div class="container">
+        <div class="container" style="color: white; text-shadow: 0px 0px 3px #000, -1px -1px #000, 1px 1px #000;">
             <h1>How to implement a chatbot with Scratchat?</h1>
             <h2>First, drag n' drop</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. </p>
