--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <a href="#">Home</a>
             <a href="aboutus.html">About us</a>
             <a href="features.html">Features</a>
+            <a href="scratchat.html">Build</a>
+            <a href="tutorial.html">Tutorial</a>
             <a href="https://scratch.mit.edu/about">About Scratch</a>
         </div>
 
