--- a/aboutus.html
+++ b/aboutus.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="col-md-4">
                     <div class="thumbnail"><img src="https://apod.nasa.gov/apod/image/1601/CoronaMt_Dai_1500.jpg">
-                        <div class="caption text-center">
+                        <div class="thumbnail"><img src="res/aaron.jpg">
                             This is a picture of this very important person.
                         </div>
                     </div>
