--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
                 <p class="lead text-center">
                 <a class="btn btn-primary btn-lg" href="scratchat.html" role="button">Start!</a>
                 <a class="btn btn-primary btn-lg" href="tutorial.html" role="button">I want to learn.</a>
+                <a class="btn btn-primary btn-lg" href="dragtest.html" role="button">Start!</a>
                 </p>
             </div>
         </div>
