--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <p class="lead text-center">
                 <a class="btn btn-primary btn-lg" href="scratchat.html" role="button">Start!</a>
                 <a class="btn btn-primary btn-lg" href="tutorial.html" role="button">I want to learn.</a>
-                <a class="btn btn-primary btn-lg" href="dragtest.html" role="button">Start!</a>
+                <a class="btn btn-primary btn-lg" href="dragtest.html" role="button">Our Drag n' Drop!</a>
+                <a class="btn btn-primary btn-lg" href="https://developers.google.com/blockly/" role="button">Blockly!</a>
                 </p>
             </div>
         </div>
