update on About me Section

--- a/aboutus.html
+++ b/aboutus.html
@@ -6,7 +6,7 @@
         <!-- jQuery cdn -->
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"   integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="   crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/main.css">
-        
+
         <script>
             function openNav() {
                 document.getElementById("mySidenav").style.width = "250px";
@@ -100,7 +100,7 @@
                     </div>
                     <div class="col-md-3 team-gd ">
                         <div class="thumb">
-                            <a href="#portfolioModal3" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="images/g2.jpg" alt="">
+                            <a href="#portfolioModal3" class="portfolio-link b-link-diagonal b-animate-go" data-toggle="modal"><img src="res/Utsab_1.jpg" alt="">
                             <div class="team_pos">
                                 <ul>
                                     <li>
