--- a/scratchat.html
+++ b/scratchat.html
@@ -66,15 +66,21 @@
             <span style="font-size:30px;cursor:pointer; color: #white" onclick="openNav()">&#9776;</span>
         </div>
 
-
-
         <div class="container">
             <div class="row">
-                <div class="col-md-6">
-                    <div id="blocklyDiv" style="height: 480px; width: 570px;"></div>
+                <div class="col-md-1"></div>
+                <div class="col-md-5">
+                    <div id="blocklyDiv" style="height: 480px; width: 475px;"></div>
                 </div>
-                <div class="col-md-6" id="textarea">
+
+                <div class="col-md-5">
+                    <div class="row" style="height: 480px; width: 475px;background-color: #cccccc;">
+                        <div class="col-md-1"></div>
+                        <div class="col-md-10" id="textarea" style="margin-top:20px; margin-bottom:20px">while(1) { }</div>
+                        <div class="col-md-1"></div>
+                    </div>
                 </div>
+                <div class="col-md-1"></div>
             </div>
 
             <div class="jumbotron" ondrop="drop(event)" ondragover="allowDrop(event)" style= "padding-bottom: 40%; ">
