Add prompt block

--- a/scratchat.html
+++ b/scratchat.html
@@ -11,7 +11,7 @@
         <script src="blockly/blockly_compressed.js"></script>
         <script src="blockly/javascript_compressed.js"></script>
         <script src="blockly/blocks_compressed.js"></script>
-
+        <script src="blockly/prompt.js"></script>
 
 
         <script src="blockly/msg/js/en.js"></script>
@@ -23,6 +23,7 @@
             <block type="math_arithmetic"></block>
             <block type="text"></block>
             <block type="text_print"></block>
+            <block type="text_prompt_ext"></block>
         </xml>
 
         <script>
