--- a/scratchat.html
+++ b/scratchat.html
@@ -69,19 +69,17 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md-5">
-                    <div id="blocklyDiv" style="height: 480px; width: 475px;"></div>
+                <div class="col-md-6">
+                    <div id="blocklyDiv" style="height: 480px; width: 100%;"></div>
                 </div>
 
-                <div class="col-md-5">
-                    <div class="row" style="height: 480px; width: 475px;background-color: #cccccc;">
+                <div class="col-md-6">
+                    <div class="row" style="height: 480px; width: 100%;background-color: #cccccc;">
                         <div class="col-md-1"></div>
                         <div class="col-md-10" id="textarea" style="margin-top:20px; margin-bottom:20px">while(1) { }</div>
                         <div class="col-md-1"></div>
                     </div>
                 </div>
-                <div class="col-md-1"></div>
             </div>
 
             <div class="jumbotron" ondrop="drop(event)" ondragover="allowDrop(event)" style= "padding-bottom: 40%; ">
