--- a/scratchat.html
+++ b/scratchat.html
@@ -68,20 +68,8 @@
         </div>
 
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div id="blocklyDiv" style="height: 480px; width: 100%;"></div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="row" style="height: 480px; width: 100%;background-color: #cccccc;">
-                        <div class="col-md-1"></div>
-                        <div class="col-md-10" id="textarea" style="margin-top:20px; margin-bottom:20px">while(1) { }</div>
-                        <div class="col-md-1"></div>
-                    </div>
-                </div>
-            </div>
-
+            <div id="blocklyDiv" style="height: 550px; width: 100%;"></div>
+            <div id="textarea" style="height: 480px; width: 100%;background-color: #cccccc; margin-top:50px;margin-bottom:50px;">while(1) { }</div>
             <div class="jumbotron" ondrop="drop(event)" ondragover="allowDrop(event)" style= "padding-bottom: 40%; ">
                 <div id="scratchQuestions" style="float: left;">
 
