--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-<!DOCTYPE html>
-<html>
+
+
+
+
+<DOCTYPE html>
     <head>
         <title>Fundamentals of SE (Scratchat)</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
