--- a/tutorial.html
+++ b/tutorial.html
@@ -37,27 +37,52 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-7 col-sm-12" style="color: white; text-shadow: 0px 0px 3px #000, -1px -1px #000, 1px 1px #000;">
-                    <h1>How to implement a chatbot with Scratchat?</h1>
-                    <h2>First, drag n' drop</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. </p>
-                    <h2>Then, hit the button <b>generate</b>.</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. </p>
-                    <h2>Create a Facebook page!</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. </p>
-                    <h2>Upload your index.js file</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales ligula in libero. </p>
+                <div class="col-md-7 col-sm-12">
+                    <div class="container-fluid" style="background-color: #fefff2;padding-top: 50px;padding-bottom:50px;">
+                        <h1>How to implement a chatbot with Scratchat?</h1>
+                        <p style="color:#878787">updated: Dec. 4, 2017</p>
+                        <hr>
+                        <br>
+                        <h2>First, drag n' drop</h2>
+                        <p>To implement a chatbot, the format goes like this:</p>
+                        <img src="res/tutorial/sample_framework.png" alt="sample framework">
+                        <p>As the picture above shown, the simpliest way to create an if-else statement. You can check user's input by using the "user input" block, and use the
+                            <i>
+                                <b>“ ”
+                                </b>
+                            </i>
+                             block to type what your desired condition.
+                         </p>
+                        <p>In this case, the example is checking if the user entered "hello". If "hello" is entered, then it will respond with "hello".</p>
+                        <h2>Then, hit the button <b>TEST</b>.</h2>
+                        <p>This button will generate a simple test chatbot for you. Once you finish implementing the bot, you can have a test run by clicking
+                            <b>TEST</b>
+                            button.
+                        </p>
+                        <p>In this case, we will use our previous example, and the example output automatically set the answer delay to 2 seconds. Here is the sample output:</p>
+                        <img src="res/tutorial/sample_output.png" alt="sample framework">
+                        <br>
+                        <h2>Stick around! More features are yet to come.</h2>
+                        <p>This is a project that is under development. And we will add more features in the future. So remember to come back!</p>
+                        <img src="res/tutorial/thankyou.jpg" alt="sample framework">
+                    </div>
                 </div>
-                <div class="col-md-5 col-sm-12 frame">
-                    <ul></ul>
-                    <div>
-                        <div class="msj-rta macro" style="margin:auto">
-                            <div class="text text-r">
-                                <input class="mytext" placeholder="Type a message"/>
+                <div class="col-md-5 col-sm-12" style="margin-top:200px;">
+                    <h1>Simple Pizza Example</h1>
+                    <br><br>
+                    <div class="col-md-12 col-sm-12 frame" style="background-color: #fefff2;opacity:.8;">
+
+                        <ul></ul>
+                        <div>
+                            <div class="msj-rta macro" style="margin:auto">
+                                <div class="text text-r">
+                                    <input class="mytext" placeholder="Type a message"/>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
+
             </div>
 
         </div>
